--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     
     <div class="bio"> <center><h3>Biodata</h3></div>
     <div class="biodata">
+        <img src="bhe.jpeg" alt="#">
   
       <p class="details">
         <b> Fullname:</b> <br>Jourish Zen H. Bulabos
